fix little buggy on mobile

--- a/css/fireball.css
+++ b/css/fireball.css
@@ -27,7 +27,7 @@
 
   .fireball {
     height: 400px;
-    width: 1000px;
+    width: 10000px;
   }
 }
 
